<resources>
    <string name="app_name">DiceRollDrinkingGame</string>
    <string name="rollsdice">rollsDice</string>
    <string name="buttonforrollingdice">buttonForRollingDIce</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="play">Play</string>
    <string name="how_to_play">HOW TO PLAY
    You roll the dice by clicking on it. When you click on it the music starts running.
    If you roll 6 you can pass the phone over to the next person.
    The person who holds the phone when the beat drops lost and should drink.</string>
    <string name="how_to_play_the_game">HOW TO PLAY THE GAME.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="you_lost">You lost!</string>
    <string name="restart">restart</string>
</resources>