<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/play"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/howToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/howToPlay"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:text="@string/how_to_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        tools:text="How to play" />

    <TextView
        android:id="@+id/play_description"
        android:layout_width="182dp"
        android:layout_height="350dp"
        android:text="@string/how_to_play_the_game"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="TextContrastCheck"
        tools:text="To play the game:  First click on the play button.  Then click on the dice, once the dice is clicked music will start playing. When you throw a 6 on the dice you can pass the device over to the next person.  The person that holds the device when the beat drops loses."
        tools:visibility="visible" />

    <Button
        android:id="@+id/menue"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:text="@string/back_to_main_menue"
        app:layout_constraintBottom_toTopOf="@+id/play_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>